@@ -1,5 +1,5 @@
 ##*****************************************************************************
-## $Id: Makefile.am,v 1.5 2003/04/18 23:20:18 dun Exp $
+## $Id: Makefile.am,v 1.6 2003/04/25 21:17:29 dun Exp $
 ##*****************************************************************************
 ## Process this file with automake to produce Makefile.in.
 ##*****************************************************************************
@@ -28,4 +28,5 @@ libmunge_la_SOURCES = \
 	msg_client.c \
 	msg_client.h \
 	strerror.c \
+	strings.c \
 	munge.h
